<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Details.DetailActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsing_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="?attr/colorPrimary"
            android:fitsSystemWindows="true"
            app:expandedTitleTextAppearance="@android:color/transparent"
            app:layout_scrollFlags="scroll|snap|exitUntilCollapsed"
            app:contentScrim="@color/colorPrimary">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.v4.view.ViewPager
                    android:id="@+id/image_slide"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:background="@color/bg_color"
                    app:layout_collapseMode="parallax">

                </android.support.v4.view.ViewPager>

                <LinearLayout
                    android:id="@+id/slider_dots"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@+id/image_slide"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="8dp"
                    android:gravity="center_vertical|center_horizontal"
                    android:orientation="horizontal" />

            </RelativeLayout>

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar_detail"
                android:layout_width="match_parent"
                android:layout_height="36dp"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

                <!--android:layout_height="?attr/actionBarSize"-->

                <ImageButton
                    android:clickable="true"
                    android:id="@+id/btn_back"
                    android:backgroundTint="#00000000"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_back_button"/>

            </android.support.v7.widget.Toolbar>

        </android.support.design.widget.CollapsingToolbarLayout>

        <android.support.design.widget.TabLayout
            android:id="@+id/tabs"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            app:tabIndicatorColor="@color/bg_color"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <android.support.design.widget.TabItem
                android:id="@+id/foryou_tab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab_text_1" />

            <android.support.design.widget.TabItem
                android:id="@+id/collection_tab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab_text_2" />

            <android.support.design.widget.TabItem
                android:id="@+id/cuisine_tab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab_text_3" />

        </android.support.design.widget.TabLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/container_details"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" />


    <android.support.design.widget.FloatingActionButton
        android:id="@+id/call_now"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxHeight="40dp"
        android:maxWidth="40dp"
        android:layout_marginRight="24dp"
        android:clickable="true"
        android:elevation="6dp"
        android:onClick="onDialButton"
        android:src="@drawable/ic_call_button"
        app:backgroundTint="@android:color/holo_green_dark"
        app:layout_anchor="@id/container_details"
        app:layout_anchorGravity="center|right|end"
        app:pressedTranslationZ="12dp"/>

</android.support.design.widget.CoordinatorLayout>